argocd/infra/configs/kong/gatewayclass.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: kong
  annotations:
    konghq.com/gatewayclass-unmanaged: "true"
    argocd.argoproj.io/sync-wave: "1"
spec:
  controllerName: konghq.com/kic-gateway-controller
